html validator fixes

--- a/index.html
+++ b/index.html
@@ -11,16 +11,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=PT+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="css-reset.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
     <link rel="preload" as="image" href="./images/farzad-p-xSl33Wxyc-unsplash.jpg">
     <link rel="preload" as="image" href="./images/orders.png">
     <link rel="preload" as="image" href="./images/thai.png">
     <link rel="preload" as="image" href="./images/frog.png">
-    <link rel="preload" as="image" href="./images/mixer.png">
-    <link rel="preload" as="image" href="./images/hearthstone.png">
     <title>Deyan Vasilev</title>
 </head>
 <body>
@@ -64,25 +62,25 @@
 
     <!-- About section & Download CV -->
 
-        <section id="about">
-            <div class="section-header">
-                <h2>About Me</h2>
-                <p>I am a T-shaped, Front-end Software Engineer based in the Greater Saint Louis area</p>
+    <section id="about">
+        <div class="section-header">
+            <h2>About Me</h2>
+            <p>I am a T-shaped, Front-end Software Engineer based in the Greater Saint Louis area</p>
+        </div>
+        <div class="about-container">
+            <div class="about-bio">
+                <p>
+                Hello World! My name is Deyan and I am a Front-end Software Engineer. I am originally from Bulgaria and have lived in the United States since 2012.<br><br>
+                I specialize in developing SPA applications with React and JavaScript, but my skillset extends well beyond that.
+                I am also more than capable of producing high quality back-end work when needed, as demonstrated by my work experience and personal projects. <br> <br>
+                I have always maintained a "Never get comfortable, always challenge yourself" mentality, which has helped me grow 
+                immensely in all of my roles. I enjoy tackling complex problems and crafting innovative solutions. <br><br>
+                If you like what you see, feel free to check out my resume or reach out to me directly! I am looking forward to hearing from you! 
+                </p> <br>
+                <a target="_blank" class="btn-live" aria-label="Opens resume in new tab" href="https://drive.google.com/file/d/1l7zHK0DgimsqvZWgbf2tpORfGTKAwQj6/view?usp=sharing">Download CV <i class="fa-solid fa-download"></i></a>
             </div>
-            <div class="about-container">
-                <div class="about-bio">
-                    <p>
-                    Hello World! My name is Deyan and I am a Front-end Software Engineer. I am originally from Bulgaria and have lived in the United States since 2012.<br><br>
-                    I specialize in developing SPA applications with React and JavaScript, but my skillset extends well beyond that.
-                    I am also more than capable of producing high quality back-end work when needed, as demonstrated by my work experience and personal projects. <br> <br>
-                    I have always maintained a "Never get comfortable, always challenge yourself" mentality, which has helped me grow 
-                    immensely in all of my roles. I enjoy tackling complex problems and crafting innovative solutions. <br><br>
-                    If you like what you see, feel free to check out my resume or reach out to me directly! I am looking forward to hearing from you! 
-                    </p> <br>
-                    <a target="_blank" class="btn-live" aria-label="Opens resume in new tab" href="https://drive.google.com/file/d/1l7zHK0DgimsqvZWgbf2tpORfGTKAwQj6/view?usp=sharing">Download CV <i class="fa-solid fa-download"></i></a>
-                </div>
-            </div>
-        </section>
+        </div>
+    </section>
 
     <!-- Skills section -->
 
@@ -93,71 +91,72 @@
 
         <div class="technologies">
             <h3>Specializations</h3>
-                <div class="tech-stack">
-                    <div class="technology">
-                        <i class="devicon-react-original colored"></i>
-                        <span>REACT</span>
-                    </div>
-                    <div class="technology">
-                        <i class="devicon-nodejs-plain-wordmark colored"></i>
-                        <span>NODE</span>
-                    </div> 
-                    <div class="technology">
-                        <i class="devicon-javascript-plain colored"></i>
-                        <span>JAVASCRIPT</span>
-                    </div> 
-                    <div class="technology">
-                        <i class="devicon-typescript-plain colored"></i>
-                        <span>TYPESCRIPT</span>
-                    </div> 
-                    <div class="technology">
-                        <i class="devicon-html5-plain-wordmark colored"></i>
-                        <span>HTML5</span>
-                    </div> 
-                    <div class="technology">
-                        <i class="devicon-css3-plain-wordmark colored"></i>
-                        <span>CSS3</span>
-                    </div>
-                    <div class="technology">
-                        <i class="devicon-materialui-plain colored"></i>
-                        <span>MATERIAL UI</span>
-                    </div>
-                    <div class="technology">
-                        <i class="devicon-redux-original colored"></i>
-                        <span>REDUX & RECOIL</span>
-                    </div>
-                    <div class="technology">
-                        <i class="devicon-jest-plain colored"></i>
-                        <span>JEST</span>
-                    </div>
+            <div class="tech-stack">
+                <div class="technology">
+                    <i class="devicon-react-original colored"></i>
+                    <span>REACT</span>
                 </div>
+                <div class="technology">
+                    <i class="devicon-nodejs-plain-wordmark colored"></i>
+                    <span>NODE</span>
+                </div> 
+                <div class="technology">
+                    <i class="devicon-javascript-plain colored"></i>
+                    <span>JAVASCRIPT</span>
+                </div> 
+                <div class="technology">
+                    <i class="devicon-typescript-plain colored"></i>
+                    <span>TYPESCRIPT</span>
+                </div> 
+                <div class="technology">
+                    <i class="devicon-html5-plain-wordmark colored"></i>
+                    <span>HTML5</span>
+                </div> 
+                <div class="technology">
+                    <i class="devicon-css3-plain-wordmark colored"></i>
+                    <span>CSS3</span>
+                </div>
+                <div class="technology">
+                    <i class="devicon-materialui-plain colored"></i>
+                    <span>MATERIAL UI</span>
+                </div>
+                <div class="technology">
+                    <i class="devicon-redux-original colored"></i>
+                    <span>REDUX & RECOIL</span>
+                </div>
+                <div class="technology">
+                    <i class="devicon-jest-plain colored"></i>
+                    <span>JEST</span>
+                </div>
+            </div>
             <h3>Knowledgeable in</h3>
-                <div class="tech-stack">
-                    <div class="technology">
-                        <i class="devicon-python-plain colored"></i>
-                        <span>PYTHON</span>
-                    </div>
-                    <div class="technology">
-                        <i class="devicon-azuresqldatabase-plain colored"></i>
-                        <span>SQL</span>
-                    </div>
-                    <div class="technology">
-                        <i class="devicon-express-original colored"></i>
-                        <span>EXPRESS</span>
-                    </div>
-                    <div class="technology">
-                        <i class="devicon-flask-original colored"></i>
-                        <span>FLASK</span>
-                    </div>
-                    <div class="technology">
-                        <i class="devicon-bootstrap-plain colored"></i>
-                        <span>BOOTSTRAP</span>
-                    </div>
-                    <div class="technology">
-                        <i class="devicon-webflow-original colored"></i>
-                        <span>WEBFLOW</span>
-                    </div>
+            <div class="tech-stack">
+                <div class="technology">
+                    <i class="devicon-python-plain colored"></i>
+                    <span>PYTHON</span>
                 </div>
+                <div class="technology">
+                    <i class="devicon-azuresqldatabase-plain colored"></i>
+                    <span>SQL</span>
+                </div>
+                <div class="technology">
+                    <i class="devicon-express-original colored"></i>
+                    <span>EXPRESS</span>
+                </div>
+                <div class="technology">
+                    <i class="devicon-flask-original colored"></i>
+                    <span>FLASK</span>
+                </div>
+                <div class="technology">
+                    <i class="devicon-bootstrap-plain colored"></i>
+                    <span>BOOTSTRAP</span>
+                </div>
+                <div class="technology">
+                    <i class="devicon-webflow-original colored"></i>
+                    <span>WEBFLOW</span>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- Projects section -->
@@ -234,7 +233,7 @@
           
             <div class="slide fade">
               <div class="slide-position">2 / 3</div>
-              <img src="./images/thai.png">
+              <img alt="Screenshot of Thai Sport Bodyworks website" src="./images/thai.png">
               <div class="slide-description">
                 <h3>Thai Sport Bodyworks Official</h3>
                 <div class="slide-tech-stack">
@@ -265,7 +264,7 @@
           
             <div class="slide fade">
               <div class="slide-position">3 / 3</div>
-              <img src="./images/frog.png">
+              <img alt="Screenshot of Frog Feast" src="./images/frog.png">
               <div class="slide-description">
                 <h3>Frog Feast - Hackathon winner</h3>
                 <div class="slide-tech-stack">
@@ -319,7 +318,7 @@
                 </div>
                 <div class="project-data">
                     <div class="project-image-container">
-                        <img alt="Screenshot of Commercio Orders" src="./images/orders.png" />
+                        <img alt="Screenshot of Commercio Orders" src="./images/orders.png">
                     </div>
                     <div class="project-information">
                         <div class="tech-used">
@@ -356,11 +355,11 @@
                                 <span class="tooltip-text">Microsoft Azure SQL Database</span>
                             </div>
                             <div class="tooltip popuptip">
-                                <i class="devicon-azuredevops-plain colored slide-tech"></i>
+                                <i class="devicon-azuredevops-plain colored project-tech"></i>
                                 <span class="tooltip-text">CI/CD, Project Management, Code reviews, Testing with Azure DevOps</span>
                             </div>
                             <div class="tooltip popuptip">
-                                <i class="devicon-git-plain colored slide-tech"></i>
+                                <i class="devicon-git-plain colored project-tech"></i>
                                 <span class="tooltip-text">Git</span>
                             </div>
                         </div>
@@ -379,7 +378,7 @@
                 </div>
                 <div class="project-data">
                     <div class="project-image-container">
-                        <img alt="Screenshot of Thai Sport Bodyworks website" src="./images/thai.png" />
+                        <img alt="Screenshot of Thai Sport Bodyworks website" src="./images/thai.png">
                     </div>
                     <div class="project-information">
                         <div class="tech-used">
@@ -415,7 +414,7 @@
                 </div>
                 <div class="project-data">
                     <div class="project-image-container">
-                        <img alt="Screenshot of Frog Feast" src="./images/frog.png" />
+                        <img alt="Screenshot of Frog Feast" src="./images/frog.png">
                     </div>
                     <div class="project-information">
                         <div class="tech-used">
@@ -436,7 +435,7 @@
                                 <span class="tooltip-text">GitHub</span>
                             </div>
                             <div class="tooltip popuptip">
-                                <i class="devicon-git-plain colored slide-tech"></i>
+                                <i class="devicon-git-plain colored project-tech"></i>
                                 <span class="tooltip-text">Git</span>
                             </div> 
                         </div>
@@ -467,7 +466,7 @@
                         <span class="tooltip-text">GitHub profile</span>
                     </div>
                     <div class="tooltip">
-                        <a aria-label="Reach out to Deyan by email" target="_blank" href="mailto: deyanvasilev7@gmail.com"><i class="fas fa-envelope mail"></i></a>
+                        <a aria-label="Reach out to Deyan by email" target="_blank" href="mailto:deyanvasilev7@gmail.com"><i class="fas fa-envelope mail"></i></a>
                         <span class="tooltip-text" style="left: -5%">Send an email to deyanvasilev7@gmail.com</span>
                     </div>
                     <div class="tooltip">
@@ -478,7 +477,7 @@
                 <!-- <div class="contact-links">
                     <a aria-label="Opens Deyan's LinkedIn profile in new tab" target="_blank" href="https://www.linkedin.com/in/deyan-vasilev/">LinkedIn <i class="fab fa-linkedin linkedin"></i></a>
                     <a aria-label="Opens Deyan's GitHub profile in new tab" target="_blank" href="https://github.com/lemonstener">GitHub <i class="fab fa-github github"></i></a>
-                    <a aria-label="Reach out to Deyan by email" target="_blank" href="mailto: deyanvasilev7@gmail.com">deyanvasilev7@gmail.com <i class="fas fa-envelope mail"></i></a>
+                    <a aria-label="Reach out to Deyan by email" target="_blank" href="mailto:deyanvasilev7@gmail.com">deyanvasilev7@gmail.com <i class="fas fa-envelope mail"></i></a>
                     <a aria-label="Download Resume in new tab" target="_blank" href="https://drive.google.com/file/d/1l7zHK0DgimsqvZWgbf2tpORfGTKAwQj6/view?usp=sharing">Resume <i class="fa-solid fa-file"></i></a>
                 </div> -->
                 <p>Website developed by Deyan Vasilev</p>
