update problematic html on slides

--- a/index.html
+++ b/index.html
@@ -177,51 +177,51 @@
                 <div class="slide-position">1 / 3</div>
                 <img alt="Screenshot of Commercio Orders" src="./images/orders.png">
                 <div class="slide-description">
-                    <h3>
-                        Commercio Orders
-                        <div class="slide-tech-stack">
-                            <div class="tooltip">
-                                <i class="devicon-react-original colored slide-tech"></i>
-                                <span class="tooltip-text">React</span>
-                            </div>
-                            <div class="tooltip">
-                                <i class="devicon-nodejs-plain-wordmark colored slide-tech"></i>
-                                <span class="tooltip-text">Node</span>
-                            </div>
-                            <div class="tooltip">
-                                <i class="devicon-typescript-plain colored slide-tech"></i>
-                                <span class="tooltip-text">TypeScript</span>
-                            </div>
-                            <div class="tooltip">
-                                <i class="devicon-materialui-plain colored slide-tech"></i>
-                                <span class="tooltip-text">Material UI</span>
-                            </div>
-                            <div class="tooltip">
-                                <i class="devicon-redux-original colored slide-tech"></i>
-                                <span class="tooltip-text">Redux & Recoil</span>
-                            </div>
-                            <div class="tooltip">
-                                <i class="devicon-jest-plain colored slide-tech"></i>
-                                <span class="tooltip-text">React Testing Library with Jest</span>
-                            </div>
-                            <div class="tooltip">
-                                <i class="devicon-csharp-line-wordmark slide-tech"></i>
-                                <span class="tooltip-text">C#</span>
-                            </div>
-                            <div class="tooltip">
-                                <i class="devicon-azuresqldatabase-plain colored slide-tech"></i>
-                                <span class="tooltip-text">Microsoft Azure SQL Database</span>
-                            </div>
-                            <div class="tooltip">
-                                <i class="devicon-azuredevops-plain colored slide-tech"></i>
-                                <span class="tooltip-text">CI/CD, Project Management, Code reviews, Testing with Azure DevOps</span>
-                            </div>
-                            <div class="tooltip">
-                                <i class="devicon-git-plain colored slide-tech"></i>
-                                <span class="tooltip-text">Git</span>
-                            </div>     
+                    <div class="slide-title-and-tech">
+                    <h3>Commercio Orders</h3>
+                    <div class="slide-tech-stack">
+                        <div class="tooltip">
+                            <i class="devicon-react-original colored slide-tech"></i>
+                            <span class="tooltip-text">React</span>
                         </div>
-                    </h3>
+                        <div class="tooltip">
+                            <i class="devicon-nodejs-plain-wordmark colored slide-tech"></i>
+                            <span class="tooltip-text">Node</span>
+                        </div>
+                        <div class="tooltip">
+                            <i class="devicon-typescript-plain colored slide-tech"></i>
+                            <span class="tooltip-text">TypeScript</span>
+                        </div>
+                        <div class="tooltip">
+                            <i class="devicon-materialui-plain colored slide-tech"></i>
+                            <span class="tooltip-text">Material UI</span>
+                        </div>
+                        <div class="tooltip">
+                            <i class="devicon-redux-original colored slide-tech"></i>
+                            <span class="tooltip-text">Redux & Recoil</span>
+                        </div>
+                        <div class="tooltip">
+                            <i class="devicon-jest-plain colored slide-tech"></i>
+                            <span class="tooltip-text">React Testing Library with Jest</span>
+                        </div>
+                        <div class="tooltip">
+                            <i class="devicon-csharp-line-wordmark slide-tech"></i>
+                            <span class="tooltip-text">C#</span>
+                        </div>
+                        <div class="tooltip">
+                            <i class="devicon-azuresqldatabase-plain colored slide-tech"></i>
+                            <span class="tooltip-text">Microsoft Azure SQL Database</span>
+                        </div>
+                        <div class="tooltip">
+                            <i class="devicon-azuredevops-plain colored slide-tech"></i>
+                            <span class="tooltip-text">CI/CD, Project Management, Code reviews, Testing with Azure DevOps</span>
+                        </div>
+                        <div class="tooltip">
+                            <i class="devicon-git-plain colored slide-tech"></i>
+                            <span class="tooltip-text">Git</span>
+                        </div>     
+                    </div>
+                    </div>
                     <p>
                         Commercio Orders is a CRM platform for Promotional Products Industry distributors. Users are able to source competitively-priced 
                         products, manage quotes, and send purchase orders with less back and forth with the suppliers, all in one system.
@@ -235,23 +235,25 @@
                 <div class="slide-position">2 / 3</div>
                 <img alt="Screenshot of Thai Sport Bodyworks website" src="./images/thai.png">
                 <div class="slide-description">
-                    <h3>Thai Sport Bodyworks Official</h3>
-                    <div class="slide-tech-stack">
-                        <div class="tooltip">
-                            <i class="devicon-webflow-original colored slide-tech"></i>
-                            <span class="tooltip-text">Webflow</span>
-                        </div>
-                        <div class="tooltip">
-                            <i class="devicon-html5-plain-wordmark colored slide-tech"></i>
-                            <span class="tooltip-text">HTML5</span>
-                        </div>
-                        <div class="tooltip">
-                            <i class="devicon-css3-plain-wordmark colored slide-tech"></i>
-                            <span class="tooltip-text">CSS3</span>
-                        </div>
-                        <div class="tooltip">
-                            <i class="devicon-javascript-plain colored slide-tech"></i>
-                            <span class="tooltip-text">JavaScript</span>
+                    <div class="slide-title-and-tech">
+                        <h3>Thai Sport Bodyworks Official</h3>
+                        <div class="slide-tech-stack">
+                            <div class="tooltip">
+                                <i class="devicon-webflow-original colored slide-tech"></i>
+                                <span class="tooltip-text">Webflow</span>
+                            </div>
+                            <div class="tooltip">
+                                <i class="devicon-html5-plain-wordmark colored slide-tech"></i>
+                                <span class="tooltip-text">HTML5</span>
+                            </div>
+                            <div class="tooltip">
+                                <i class="devicon-css3-plain-wordmark colored slide-tech"></i>
+                                <span class="tooltip-text">CSS3</span>
+                            </div>
+                            <div class="tooltip">
+                                <i class="devicon-javascript-plain colored slide-tech"></i>
+                                <span class="tooltip-text">JavaScript</span>
+                            </div>
                         </div>
                     </div>
                     <p>
@@ -266,28 +268,30 @@
                 <div class="slide-position">3 / 3</div>
                 <img alt="Screenshot of Frog Feast" src="./images/frog.png">
                 <div class="slide-description">
-                    <h3>Frog Feast - Hackathon winner</h3>
-                    <div class="slide-tech-stack">
-                        <div class="tooltip">
-                            <i class="devicon-html5-plain-wordmark colored slide-tech"></i>
-                            <span class="tooltip-text">HTML5</span>
+                    <div class="slide-title-and-tech">
+                        <h3>Frog Feast - Hackathon winner</h3>
+                        <div class="slide-tech-stack">
+                            <div class="tooltip">
+                                <i class="devicon-html5-plain-wordmark colored slide-tech"></i>
+                                <span class="tooltip-text">HTML5</span>
+                            </div>
+                            <div class="tooltip">
+                                <i class="devicon-css3-plain-wordmark colored slide-tech"></i>
+                                <span class="tooltip-text">CSS3</span>
+                            </div>
+                            <div class="tooltip">
+                                <i class="devicon-javascript-plain colored slide-tech"></i>
+                                <span class="tooltip-text">JavaScript</span>
+                            </div>
+                            <div class="tooltip">
+                                <i class="devicon-github-original project-tech"></i>
+                                <span class="tooltip-text">GitHub</span>
+                            </div>
+                            <div class="tooltip">
+                                <i class="devicon-git-plain colored slide-tech"></i>
+                                <span class="tooltip-text">Git</span>
+                            </div> 
                         </div>
-                        <div class="tooltip">
-                            <i class="devicon-css3-plain-wordmark colored slide-tech"></i>
-                            <span class="tooltip-text">CSS3</span>
-                        </div>
-                        <div class="tooltip">
-                            <i class="devicon-javascript-plain colored slide-tech"></i>
-                            <span class="tooltip-text">JavaScript</span>
-                        </div>
-                        <div class="tooltip">
-                            <i class="devicon-github-original project-tech"></i>
-                            <span class="tooltip-text">GitHub</span>
-                        </div>
-                        <div class="tooltip">
-                            <i class="devicon-git-plain colored slide-tech"></i>
-                            <span class="tooltip-text">Git</span>
-                        </div> 
                     </div>
                     <p>
                         Frog Feast is a browser-based game I built in 7 days where you are a frog, eating bugs for a high score. This was my entry for the August Mintbean 
