update color palette to add more contrast

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 <img alt="Screenshot of Thai Sport Bodyworks website" src="./images/thai.png">
                 <div class="slide-description">
                     <div class="slide-title-and-tech">
-                        <h3>Thai Sport Bodyworks Official</h3>
+                        <h3>Thai Sport Bodyworks - Official website</h3>
                         <div class="slide-tech-stack">
                             <div class="tooltip">
                                 <i class="devicon-webflow-original colored slide-tech"></i>
@@ -378,7 +378,7 @@
                 </li>
                 <li class="project">
                     <div class="project-header">
-                        <h3 class="project-title">Thai Sport Bodyworks Official</h3>
+                        <h3 class="project-title">Thai Sport Bodyworks - Official website</h3>
                     </div>
                     <div class="project-data">
                         <div class="project-image-container">
@@ -474,7 +474,7 @@
                         <span class="tooltip-text" style="left: -5%">Send an email to deyanvasilev7@gmail.com</span>
                     </div>
                     <div class="tooltip">
-                        <a aria-label="Download Resume in new tab" target="_blank" href="https://drive.google.com/file/d/1l7zHK0DgimsqvZWgbf2tpORfGTKAwQj6/view?usp=sharing"><i class="fa-solid fa-file"></i></a>
+                        <a aria-label="Download CV in new tab" target="_blank" href="https://drive.google.com/file/d/1l7zHK0DgimsqvZWgbf2tpORfGTKAwQj6/view?usp=sharing"><i class="fa-solid fa-file"></i></a>
                         <span class="tooltip-text">Download resume</span>
                     </div>
                 </div>
@@ -482,7 +482,7 @@
                     <a aria-label="Opens Deyan's LinkedIn profile in new tab" target="_blank" href="https://www.linkedin.com/in/deyan-vasilev/">LinkedIn <i class="fab fa-linkedin linkedin"></i></a>
                     <a aria-label="Opens Deyan's GitHub profile in new tab" target="_blank" href="https://github.com/lemonstener">GitHub <i class="fab fa-github github"></i></a>
                     <a aria-label="Reach out to Deyan by email" target="_blank" href="mailto:deyanvasilev7@gmail.com">deyanvasilev7@gmail.com <i class="fas fa-envelope mail"></i></a>
-                    <a aria-label="Download Resume in new tab" target="_blank" href="https://drive.google.com/file/d/1l7zHK0DgimsqvZWgbf2tpORfGTKAwQj6/view?usp=sharing">Resume <i class="fa-solid fa-file"></i></a>
+                    <a aria-label="Download CV in new tab" target="_blank" href="https://drive.google.com/file/d/1l7zHK0DgimsqvZWgbf2tpORfGTKAwQj6/view?usp=sharing">Resume <i class="fa-solid fa-file"></i></a>
                 </div> -->
                 <p>Website developed by Deyan Vasilev</p>
         </section>
