--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
                     <a aria-label="Reach out to Deyan by email" target="_blank" href="mailto:deyanvasilev7@gmail.com">deyanvasilev7@gmail.com <i class="fas fa-envelope mail"></i></a>
                     <a aria-label="Download CV in new tab" target="_blank" href="https://drive.google.com/file/d/1l7zHK0DgimsqvZWgbf2tpORfGTKAwQj6/view?usp=sharing">Resume <i class="fa-solid fa-file"></i></a>
                 </div> -->
-                <p>Website developed by Deyan Vasilev</p>
+                <p>Website designed and developed by Deyan Vasilev</p>
         </section>
     </footer>
 
