update footer for smaller screens and additional accessibility qoa

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                 <span class="dot" onclick="currentSlide(3)"></span>
             </div>
             
-            <!-- Projects list for bigger screen -->
+            <!-- Projects list for smaller screen -->
 
             <ul>
                 <li class="project">
@@ -454,7 +454,8 @@
                 </li>
             </ul>
         </section>
-</main>
+    </main>
+
     <!-- Contact & Footer -->
 
     <footer>
@@ -478,12 +479,12 @@
                         <span class="tooltip-text">Download resume</span>
                     </div>
                 </div>
-                <!-- <div class="contact-links">
+                <div class="contact-links">
                     <a aria-label="Opens Deyan's LinkedIn profile in new tab" target="_blank" href="https://www.linkedin.com/in/deyan-vasilev/">LinkedIn <i class="fab fa-linkedin linkedin"></i></a>
                     <a aria-label="Opens Deyan's GitHub profile in new tab" target="_blank" href="https://github.com/lemonstener">GitHub <i class="fab fa-github github"></i></a>
                     <a aria-label="Reach out to Deyan by email" target="_blank" href="mailto:deyanvasilev7@gmail.com">deyanvasilev7@gmail.com <i class="fas fa-envelope mail"></i></a>
-                    <a aria-label="Download CV in new tab" target="_blank" href="https://drive.google.com/file/d/1l7zHK0DgimsqvZWgbf2tpORfGTKAwQj6/view?usp=sharing">Resume <i class="fa-solid fa-file"></i></a>
-                </div> -->
+                    <a aria-label="Download CV in new tab" target="_blank" href="https://drive.google.com/file/d/1l7zHK0DgimsqvZWgbf2tpORfGTKAwQj6/view?usp=sharing">CV <i class="fa-solid fa-file"></i></a>
+                </div>
                 <p>Website designed and developed by Deyan Vasilev</p>
         </section>
     </footer>
