update hamburger margin

--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
                     </div> 
                     <div class="technology">
                         <i class="devicon-html5-plain-wordmark colored"></i>
-                        <span>HTML5</span>
+                        <span>HTML</span>
                     </div> 
                     <div class="technology">
                         <i class="devicon-css3-plain-wordmark colored"></i>
-                        <span>CSS3</span>
+                        <span>CSS</span>
                     </div>
                     <div class="technology">
                         <i class="devicon-materialui-plain colored"></i>
@@ -244,11 +244,11 @@
                             </div>
                             <div class="tooltip">
                                 <i class="devicon-html5-plain-wordmark colored slide-tech"></i>
-                                <span class="tooltip-text">HTML5</span>
+                                <span class="tooltip-text">HTML</span>
                             </div>
                             <div class="tooltip">
                                 <i class="devicon-css3-plain-wordmark colored slide-tech"></i>
-                                <span class="tooltip-text">CSS3</span>
+                                <span class="tooltip-text">CSS</span>
                             </div>
                             <div class="tooltip">
                                 <i class="devicon-javascript-plain colored slide-tech"></i>
@@ -273,11 +273,11 @@
                         <div class="slide-tech-stack">
                             <div class="tooltip">
                                 <i class="devicon-html5-plain-wordmark colored slide-tech"></i>
-                                <span class="tooltip-text">HTML5</span>
+                                <span class="tooltip-text">HTML</span>
                             </div>
                             <div class="tooltip">
                                 <i class="devicon-css3-plain-wordmark colored slide-tech"></i>
-                                <span class="tooltip-text">CSS3</span>
+                                <span class="tooltip-text">CSS</span>
                             </div>
                             <div class="tooltip">
                                 <i class="devicon-javascript-plain colored slide-tech"></i>
@@ -392,11 +392,11 @@
                                 </div>
                                 <div class="tooltip popuptip">
                                     <i class="devicon-html5-plain-wordmark colored project-tech"></i>
-                                    <span class="tooltip-text">HTML5</span>
+                                    <span class="tooltip-text">HTML</span>
                                 </div>
                                 <div class="tooltip popuptip">
                                     <i class="devicon-css3-plain-wordmark colored project-tech"></i>
-                                    <span class="tooltip-text">CSS3</span>
+                                    <span class="tooltip-text">CSS</span>
                                 </div>
                                 <div class="tooltip popuptip">
                                     <i class="devicon-javascript-plain colored project-tech"></i>
@@ -424,11 +424,11 @@
                             <div class="tech-used">
                                 <div class="tooltip popuptip">
                                     <i class="devicon-html5-plain-wordmark colored project-tech"></i>
-                                    <span class="tooltip-text">HTML5</span>
+                                    <span class="tooltip-text">HTML</span>
                                 </div>
                                 <div class="tooltip popuptip">
                                     <i class="devicon-css3-plain-wordmark colored project-tech"></i>
-                                    <span class="tooltip-text">CSS3</span>
+                                    <span class="tooltip-text">CSS</span>
                                 </div>
                                 <div class="tooltip popuptip">
                                     <i class="devicon-javascript-plain colored project-tech"></i>
