--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
                             <span class="tooltip-text">C#</span>
                         </div>
                         <div class="tooltip">
-                            <i class="devicon-azuresqldatabase-plain colored slide-tech"></i>
-                            <span class="tooltip-text">Microsoft Azure SQL Database</span>
+                            <i class="devicon-microsoftsqlserver-plain-wordmark slide-tech"></i>
+                            <span class="tooltip-text">Microsoft SQL Server</span>
                         </div>
                         <div class="tooltip">
                             <i class="devicon-azuredevops-plain colored slide-tech"></i>
@@ -355,8 +355,8 @@
                                     <span class="tooltip-text">C#</span>
                                 </div>
                                 <div class="tooltip popuptip">
-                                    <i class="devicon-azuresqldatabase-plain colored project-tech"></i>
-                                    <span class="tooltip-text">Microsoft Azure SQL Database</span>
+                                    <i class="devicon-microsoftsqlserver-plain-wordmark project-tech"></i>
+                                    <span class="tooltip-text">Microsoft SQL Server</span>
                                 </div>
                                 <div class="tooltip popuptip">
                                     <i class="devicon-azuredevops-plain colored project-tech"></i>
